--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "build_container_action" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "build_container_action" ]
 
 jobs:
 
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file echo-side/containers/basic_env/Dockerfile --tag csd3-echo-somerville:$(date +%s) --tag csd3-echo-somerville:latest
+      run: docker build . --file echo-side/containers/basic_env/Dockerfile --tag ghcr.io/lsst-uk/csd3-echo-somerville:$(date +%s) --tag ghcr.io/lsst-uk/csd3-echo-somerville:latest
