--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,5 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker build . --file echo-side/containers/basic_env/Dockerfile --tag ghcr.io/lsst-uk/csd3-echo-somerville:$(date +%s) --tag ghcr.io/lsst-uk/csd3-echo-somerville:latest
+    - name: Push the Docker image
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u davedavemckay --password-stdin && docker push ghcr.io/lsst-uk/csd3-echo-somerville:$(date +%s) && docker push ghcr.io/lsst-uk/csd3-echo-somerville:latest
