--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file echo-side/containers/basic_env/Dockerfile --tag ghcr.io/lsst-uk/csd3-echo-somerville:$(date +%s) --tag ghcr.io/lsst-uk/csd3-echo-somerville:latest
+      run: docker build . --file echo-side/containers/basic_env/Dockerfile --tag ghcr.io/lsst-uk/csd3-echo-somerville:$(date +%Y%m%d) --tag ghcr.io/lsst-uk/csd3-echo-somerville:latest
     - name: Push the Docker image
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u davedavemckay --password-stdin && docker push ghcr.io/lsst-uk/csd3-echo-somerville:$(date +%s) && docker push ghcr.io/lsst-uk/csd3-echo-somerville:latest
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u davedavemckay --password-stdin && docker push ghcr.io/lsst-uk/csd3-echo-somerville:$(date +%Y%m%d) && docker push ghcr.io/lsst-uk/csd3-echo-somerville:latest
