--- a/echo-side/containers/basic_env/Dockerfile
+++ b/echo-side/containers/basic_env/Dockerfile
@@ -8,8 +8,6 @@ RUN conda install -y -c conda-forge mamba && mamba init
 
 COPY environment.yaml /environment.yaml
 
-RUN cat /environment.yaml
-
 RUN mamba env create --name lsst-uk --file=/environment.yaml
 
 SHELL ["conda", "run", "-n", "lsst-uk", "/bin/bash", "-c"]
@@ -19,5 +17,7 @@ RUN git clone https://github.com/lsst-uk/csd3-echo-somerville.git
 RUN cd csd3-echo-somerville && python -m pip install .
 
 COPY echo-side/containers/basic_env/entrypoint.sh /entrypoint.sh
+
+RUN mamba env export
 
 ENTRYPOINT ["/entrypoint.sh"]
