--- a/.github/workflows/mamba-env.yml
+++ b/.github/workflows/mamba-env.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: mamba env CI
 
 on:
   push:
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file echo-side/containers/basic_env/Dockerfile --tag ghcr.io/lsst-uk/csd3-echo-somerville:$(git rev-parse --short HEAD) --tag ghcr.io/lsst-uk/csd3-echo-somerville:latest
+      run: docker build . --file echo-side/containers/mamba_env/Dockerfile --tag ghcr.io/lsst-uk/csd3-echo-somerville:$(git rev-parse --short HEAD) --tag ghcr.io/lsst-uk/csd3-echo-somerville:latest
     - name: Push the Docker image
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u lsst-uk --password-stdin && docker push --all-tags ghcr.io/lsst-uk/csd3-echo-somerville
