--- a/.github/workflows/bm_version.yml
+++ b/.github/workflows/bm_version.yml
@@ -15,20 +15,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: get bm version
-      run: |
-        grep "version" csd3-echo-somerville/setup.py | awk -F\' '{print $2}' | awk -F\- '{print $1}' > version.txt
     - name: set bm version
       run: |
-        bm_version=$(cat version.txt)
+        bm_version=$(grep "version" setup.py | awk -F\' '{print $2}' | awk -F\- '{print $1}')
         git_hash=$(git rev-parse --short "$GITHUB_SHA")
-        sed -i "s/version.*/version='${bm_version}-dev-${git_hash}'/" csd3-echo-somerville/setup.py
+        sed -i "s/version.*/version='${bm_version}-dev-${git_hash}'/" setup.py
     - name: commit bm version CI
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-        git add csd3-echo-somerville/setup.py
+        git add setup.py
         git commit -m "bm version: updated to ${bm_version}-dev-${git_hash}"
     - name: push bm version CI
       run: |
