--- a/.github/workflows/bm_version.yml
+++ b/.github/workflows/bm_version.yml
@@ -2,6 +2,8 @@ name: bm version CI
 
 on:
   push:
+    branches:
+      - "**"
     paths:
       - bucket_manager/**
 
@@ -13,21 +15,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: get bm version
-      run: |
-        grep "version" csd3-echo-somerville/setup.py | awk -F\' '{print $2}' | awk -F\- '{print $1}' > version.txt
     - name: set bm version
       run: |
-        bm_version=$(cat version.txt)
-        git_hash=$(git rev-parse --short "$GITHUB_SHA")
-        sed -i "s/version.*/version='${bm_version}-dev-${git_hash}'/" csd3-echo-somerville/setup.py
+        bm_version=$(grep "version" setup.py | awk -F\' '{print $2}')
+        if [[ $bm_version == *"dev"* ]]; then
+          new_bm_version=$(echo $bm_version | awk -Fv '{print $1"v"$2+1}')
+        else
+          new_bm_version=${bm_version}.dev1
+        fi
+        sed -i "s/$bm_version/$new_bm_version/" setup.py
     - name: commit bm version CI
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-        git add csd3-echo-somerville/setup.py
-        git commit -m "bm version: updated to ${bm_version}-dev-${git_hash}"
+        git add setup.py
+        git commit -m "bm version: updated to bm_version-dev-git_hash"
     - name: push bm version CI
       run: |
         git push
