use mamba for urllib3

--- a/echo-side/containers/mamba_env/Dockerfile
+++ b/echo-side/containers/mamba_env/Dockerfile
@@ -1,4 +1,4 @@
-FROM condaforge/miniforge3
+FROM mambaorg/micromamba
 
 LABEL org.opencontainers.image.source https://github.com/lsst-uk/csd3-echo-somerville
 LABEL org.opencontainers.image.description="Code to backup and curate LSST-UK data from CSD3 to Echo."
@@ -6,9 +6,9 @@ LABEL org.opencontainers.image.licenses="Apache-2.0"
 
 COPY environment.yaml /environment.yaml
 
-RUN mamba env create --name lsst-uk --file=/environment.yaml
+RUN micromamba --version
 
-RUN mamba init
+RUN micromamba env create --name lsst-uk --file=/environment.yaml
 
 SHELL ["conda", "run", "-n", "lsst-uk", "/bin/bash", "-c"]
 
@@ -17,7 +17,5 @@ RUN git clone https://github.com/lsst-uk/csd3-echo-somerville.git
 RUN cd csd3-echo-somerville && python -m pip install .
 
 COPY echo-side/containers/mamba_env/entrypoint.sh /entrypoint.sh
-
-RUN mamba env export
 
 ENTRYPOINT ["/entrypoint.sh"]
