--- a/environment.yaml
+++ b/environment.yaml
@@ -17,6 +17,7 @@ dependencies:
   - apache-airflow-providers-cncf-kubernetes=8.0.1=pyhd8ed1ab_0
   - apache-airflow-providers-common-io=1.3.0=pyhd8ed1ab_0
   - apache-airflow-providers-common-sql=1.11.1=pyhd8ed1ab_0
+  - apache-airflow-providers-docker=3.12.0=pyhd8ed1ab_0
   - apache-airflow-providers-ftp=3.7.0=pyhd8ed1ab_0
   - apache-airflow-providers-http=4.10.0=pyhd8ed1ab_0
   - apache-airflow-providers-imap=3.5.0=pyhd8ed1ab_0
@@ -31,6 +32,7 @@ dependencies:
   - asttokens=2.0.5=pyhd3eb1b0_0
   - async-lru=2.0.4=py310h06a4308_0
   - async-timeout=4.0.3=pyhd8ed1ab_0
+  - atk-1.0=2.38.0=h04ea711_2
   - attrs=23.1.0=py310h06a4308_0
   - aws-c-auth=0.7.16=h79b3bcb_6
   - aws-c-cal=0.6.10=hb29e0c7_1
@@ -61,11 +63,12 @@ dependencies:
   - brotli-python=1.0.9=py310h6a678d5_7
   - bzip2=1.0.8=h5eee18b_5
   - c-ares=1.27.0=hd590300_0
-  - ca-certificates=2024.3.11=h06a4308_0
+  - ca-certificates=2025.1.31=hbcca054_0
   - cachelib=0.9.0=pyhd8ed1ab_0
   - cachetools=5.3.3=pyhd8ed1ab_0
+  - cairo=1.18.0=h3faef2a_0
   - celery=5.3.6=pyhd8ed1ab_0
-  - certifi=2024.6.2=py310h06a4308_0
+  - certifi=2024.12.14=pyhd8ed1ab_0
   - cffi=1.16.0=py310h5eee18b_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.1.7=unix_pyh707e725_0
@@ -95,10 +98,12 @@ dependencies:
   - dill=0.3.8=pyhd8ed1ab_0
   - distributed=2024.3.0=pyhd8ed1ab_0
   - dnspython=2.6.1=pyhd8ed1ab_0
+  - docker-py=7.1.0=pyhd8ed1ab_0
   - docutils=0.20.1=py310hff52083_3
   - email-validator=1.3.1=pyhd8ed1ab_0
   - exceptiongroup=1.2.0=py310h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
+  - expat=2.6.4=h5888daf_0
   - flask=2.2.5=pyhd8ed1ab_0
   - flask-appbuilder=4.3.11=pyhd8ed1ab_0
   - flask-babel=2.0.0=pyhd8ed1ab_1
@@ -109,20 +114,37 @@ dependencies:
   - flask-session=0.5.0=pyhd8ed1ab_0
   - flask-sqlalchemy=2.5.1=pyhd8ed1ab_0
   - flask-wtf=1.2.1=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
   - freetype=2.12.1=h267a509_2
+  - fribidi=1.0.10=h36c2ea0_0
   - frozenlist=1.4.1=py310h2372a71_0
   - fsspec=2024.2.0=pyhca7485f_0
   - furl=2.1.3=pyhd8ed1ab_0
+  - gdk-pixbuf=2.42.10=h6c15284_3
+  - gettext=0.22.5=he02047a_3
+  - gettext-tools=0.22.5=he02047a_3
   - gflags=2.2.2=he1b5a44_1004
+  - giflib=5.2.2=hd590300_0
   - glog=0.7.0=hed5481d_0
   - google-auth=2.28.2=pyhca7485f_0
   - google-re2=1.1=py310hd1af1a7_0
   - googleapis-common-protos=1.63.0=pyhd8ed1ab_0
+  - graphite2=1.3.13=h59595ed_1003
+  - graphviz=9.0.0=h78e8752_1
   - greenlet=3.0.3=py310hc6cd4ac_0
   - grpcio=1.62.1=py310h1b8f574_0
+  - gtk2=2.24.33=h280cfa0_4
+  - gts=0.7.6=h977cf35_4
   - gunicorn=21.2.0=py310hff52083_1
   - h11=0.14.0=pyhd8ed1ab_0
   - h2=4.1.0=pyhd8ed1ab_0
+  - harfbuzz=8.5.0=hfac3d4d_0
   - hpack=4.0.0=pyh9f0ad1d_0
   - httpcore=1.0.4=pyhd8ed1ab_0
   - httpx=0.27.0=pyhd8ed1ab_0
@@ -172,6 +194,8 @@ dependencies:
   - libarrow-flight-sql=15.0.1=h757c851_1_cpu
   - libarrow-gandiva=15.0.1=hb016d2e_1_cpu
   - libarrow-substrait=15.0.1=h757c851_1_cpu
+  - libasprintf=0.22.5=he8f35ee_3
+  - libasprintf-devel=0.22.5=he8f35ee_3
   - libbrotlicommon=1.1.0=hd590300_1
   - libbrotlidec=1.1.0=hd590300_1
   - libbrotlienc=1.1.0=hd590300_1
@@ -181,9 +205,15 @@ dependencies:
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=hd590300_2
   - libevent=2.1.12=hf998b51_1
+  - libexpat=2.6.4=h5888daf_0
   - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=13.2.0=h807b86a_5
-  - libgomp=13.2.0=h807b86a_5
+  - libgcc=14.2.0=h77fa898_1
+  - libgcc-ng=14.2.0=h69a702a_1
+  - libgd=2.3.3=he9388d3_8
+  - libgettextpo=0.22.5=he02047a_3
+  - libgettextpo-devel=0.22.5=he02047a_3
+  - libglib=2.80.2=hf974151_0
+  - libgomp=14.2.0=h77fa898_1
   - libgoogle-cloud=2.22.0=h9be4e54_1
   - libgoogle-cloud-storage=2.22.0=hc7a4891_1
   - libgrpc=1.62.1=h15f2491_0
@@ -192,21 +222,27 @@ dependencies:
   - libllvm16=16.0.6=hb3ce162_3
   - libnghttp2=1.58.0=h47da74e_1
   - libnl=3.9.0=hd590300_0
+  - libnsl=2.0.1=hd590300_0
   - libnuma=2.0.16=h0b41bf4_1
   - libparquet=15.0.1=h352af49_1_cpu
   - libpng=1.6.43=h2797004_0
   - libpq=16.2=h33b98f1_0
   - libprotobuf=4.25.3=h08a7969_0
   - libre2-11=2023.09.01=h5a48ba9_2
+  - librsvg=2.56.3=he3f83f7_1
   - libsodium=1.0.18=h7b6447c_0
+  - libsqlite=3.46.0=hde9e2c9_0
   - libssh2=1.11.0=h0841786_0
+  - libstdcxx=14.2.0=hc0a3c3a_1
   - libstdcxx-ng=13.2.0=h7e041cc_5
   - libthrift=0.19.0=hb90f79a_1
   - libtiff=4.6.0=h29866fb_1
   - libutf8proc=2.8.0=h166bdaf_0
-  - libuuid=1.41.5=h5eee18b_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libwebp=1.3.2=hdffd6e0_0
   - libwebp-base=1.3.2=hd590300_0
   - libxcb=1.15=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
   - libxml2=2.12.5=h232c23b_0
   - libxslt=1.1.39=h76b75d6_0
   - libzlib=1.2.13=hd590300_5
@@ -245,7 +281,7 @@ dependencies:
   - numpy-base=1.26.4=py310hb5e798b_0
   - oauthlib=3.2.2=pyhd8ed1ab_0
   - openjpeg=2.5.2=h488ebb8_0
-  - openssl=3.2.1=hd590300_0
+  - openssl=3.4.0=h7b32b05_1
   - opentelemetry-api=1.16.0=pyhd8ed1ab_0
   - opentelemetry-exporter-otlp=1.16.0=pyhd8ed1ab_0
   - opentelemetry-exporter-otlp-proto-grpc=1.16.0=pyhd8ed1ab_0
@@ -260,15 +296,19 @@ dependencies:
   - packaging=23.1=py310h06a4308_0
   - pandas=2.2.1=py310hcc13569_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
+  - pango=1.54.0=h84a9a3c_0
+  - paramiko=3.4.0=pyhd8ed1ab_0
   - parso=0.8.3=pyhd3eb1b0_0
   - partd=1.4.1=pyhd8ed1ab_0
   - passlib=1.7.4=pyhd8ed1ab_1
   - pathspec=0.12.1=pyhd8ed1ab_0
+  - pcre2=10.43=hcad00b1_0
   - pendulum=3.0.0=py310h58cd448_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - phonenumbers=8.13.31=pyhd8ed1ab_0
   - pillow=10.0.1=py310h29da1c1_1
   - pip=23.3.1=py310h06a4308_0
+  - pixman=0.44.2=h29eaf8c_0
   - platformdirs=3.10.0=py310h06a4308_0
   - pluggy=1.4.0=pyhd8ed1ab_0
   - ply=3.11=py_1
@@ -290,13 +330,16 @@ dependencies:
   - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.15.1=py310h06a4308_1
   - pyjwt=2.8.0=pyhd8ed1ab_1
+  - pynacl=1.5.0=py310h2372a71_3
   - pyopenssl=24.0.0=pyhd8ed1ab_0
   - pyparsing=3.0.9=py310h06a4308_0
   - pysocks=1.7.1=py310h06a4308_0
-  - python=3.10.13=h955ad1f_0
+  - python=3.10.13=hd12c33a_1_cpython
   - python-daemon=3.0.1=pyhd8ed1ab_2
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-dotenv=1.0.1=pyhd8ed1ab_0
   - python-fastjsonschema=2.16.2=py310h06a4308_0
+  - python-graphviz=0.20.3=pyh91182bf_2
   - python-json-logger=2.0.7=py310h06a4308_0
   - python-kubernetes=29.0.0=pyhd8ed1ab_0
   - python-nvd3=0.15.0=pyh9f0ad1d_2
@@ -306,6 +349,7 @@ dependencies:
   - python_abi=3.10=2_cp310
   - pytz=2023.3.post1=py310h06a4308_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
+  - pywin32-on-windows=0.1.0=pyh1179c8e_3
   - pyyaml=6.0.1=py310h5eee18b_0
   - pyzmq=25.1.2=py310h6a678d5_0
   - rdma-core=50.0=hd3aeb46_1
@@ -360,7 +404,7 @@ dependencies:
   - text-unidecode=1.3=pyhd8ed1ab_1
   - time-machine=2.13.0=py310h2372a71_1
   - tinycss2=1.2.1=py310h06a4308_0
-  - tk=8.6.12=h1ccaba5_0
+  - tk=8.6.13=noxft_h4845f30_101
   - tomli=2.0.1=py310h06a4308_0
   - toolz=0.12.1=pyhd8ed1ab_0
   - tornado=6.3.3=py310h5eee18b_0
@@ -383,8 +427,17 @@ dependencies:
   - wheel=0.41.2=py310h06a4308_0
   - wrapt=1.16.0=py310h2372a71_0
   - wtforms=3.1.2=pyhd8ed1ab_0
+  - xorg-kbproto=1.0.7=hb9d3cd8_1003
+  - xorg-libice=1.1.2=hb9d3cd8_0
+  - xorg-libsm=1.2.5=he73a12e_0
+  - xorg-libx11=1.8.9=h8ee46fc_0
   - xorg-libxau=1.0.11=hd590300_0
   - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-renderproto=0.11.1=hb9d3cd8_1003
+  - xorg-xextproto=7.3.0=hb9d3cd8_1004
+  - xorg-xproto=7.0.31=hb9d3cd8_1008
   - xyzservices=2023.10.1=pyhd8ed1ab_0
   - xz=5.4.6=h5eee18b_0
   - yaml=0.2.5=h7b6447c_0
@@ -394,4 +447,7 @@ dependencies:
   - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=hd590300_5
   - zstd=1.5.5=hfc55251_0
-  - urllib3
+  - pip:
+      - bucket-manager==0.4.0.dev5
+      - urllib3==2.0.7
+prefix: /home/dave/miniconda3/envs/lsst-uk
