--- a/.github/workflows/dask-env.yml
+++ b/.github/workflows/dask-env.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file echo-side/containers/mamba_env/Dockerfile --tag ghcr.io/lsst-uk/ces-dask:$(git rev-parse --short HEAD) --tag ghcr.io/lsst-uk/ces-dask:latest
     - name: Push the Docker image
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u lsst-uk --password-stdin && docker push --all-tags ghcr.io/lsst-uk/csd3-echo-somerville
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u lsst-uk --password-stdin && docker push --all-tags ghcr.io/lsst-uk/ces-dask
