--- a/.github/workflows/test-env.yml
+++ b/.github/workflows/test-env.yml
@@ -15,6 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file echo-side/containers/mamba_env/Dockerfile --tag ghcr.io/lsst-uk/csd3-echo-somerville:$(git rev-parse --short HEAD)-tests --tag ghcr.io/lsst-uk/csd3-echo-somerville:tests
+      run: docker build . --file echo-side/containers/mamba_env/Dockerfile --tag ghcr.io/lsst-uk/ces-tests:$(git rev-parse --short HEAD)-tests --tag ghcr.io/lsst-uk/ces-tests:latest
     - name: Push the Docker image
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u lsst-uk --password-stdin && docker push --all-tags ghcr.io/lsst-uk/csd3-echo-somerville
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u lsst-uk --password-stdin && docker push --all-tags ghcr.io/lsst-uk/ces-tests
