conda clean to reduce image size

--- a/echo-side/containers/mamba_env/Dockerfile
+++ b/echo-side/containers/mamba_env/Dockerfile
@@ -13,7 +13,9 @@ RUN chown -R mambauser:mambauser /airflow
 USER mambauser
 RUN micromamba --version
 
-RUN micromamba env create --name lsst-uk --file=/environment.yaml
+RUN micromamba env create --name lsst-uk --file=/environment.yaml && \
+    micromamba clean -afy && \
+    rm -rf /opt/conda/pkgs/*
 
 RUN echo "source activate lsst-uk" >> ~/.bashrc
 
