128 clean up zips with dask k8s (#131)
* add import

* add random tag to namespace

* create namespace

* dummy scale

* specify limits

* remove scale

* apply n_workers separately

* no memory_limit attribute

* try resources dict

* tag pod name not namespace

* pass num_threads to k8s as cpu request

* ... and limits

* add tag to namespace

* add 'tests' container

* update conda envs

* add service account details

* debuggign

* improve DAG structue

* linting

* do not install kubectl in container

* read namespace

* try mounting account token

* nope

* use airflow namespace in DAG defn

* account for no zips in metadata clean-up

* added LSST-IR-FUSION-Butlers-wide, removed a test bucket (#129)

* added LSST-IR-FUSION-Butlers-wide, removed a test bucket (#130)

* debug

* change branch clone in Dockerfile

* run with debugging in airflow

* small test mem_request

* freeing up memory

* do not use default namespace

* use dask-service-clusters

* return to full memory

* try airflow namespace

* use dask-service-clusters

* verification returns name of verified object

* improve remaining_objects_set

* persist verified_zips

* correct filter conditions

* typo

* try without scatter

* add dask image

* use dask image

* syntax errror

* rename CI file

* fix CI

* push to ces-dask

* compute len

* clarifying log

* persist ddf before compute len

* 1000 n_workers partitions

* no compute

* more mem

* .

* memory

* 8

* remove cpu request

* test rss

* chance n_workers and n_procs to dask_workers

* fixed deployment names

* correct image sources

* clean up GH actions

* .

* run mamba actions

* conda clean to reduce image size

* .

* .

* use dask original image

* map len

* no num_vz

* compute deleted and repartition current_zips

* sum deleted

* added conda env consistent with dask images

* use main image for dask cluster

* try resource requersts

* fixing resource requests

* hard-coing mem and cpus

* large cpu count and mem

* lower cp

--- a/echo-side/containers/mamba_env/Dockerfile
+++ b/echo-side/containers/mamba_env/Dockerfile
@@ -13,7 +13,9 @@ RUN chown -R mambauser:mambauser /airflow
 USER mambauser
 RUN micromamba --version
 
-RUN micromamba env create --name lsst-uk --file=/environment.yaml
+RUN micromamba env create --name lsst-uk --file=/environment.yaml && \
+    micromamba clean -afy && \
+    rm -rf /opt/conda/pkgs/*
 
 RUN echo "source activate lsst-uk" >> ~/.bashrc
 
@@ -21,7 +23,7 @@ RUN echo "alias mamba='micromamba'" >> ~/.bashrc
 
 SHELL ["micromamba", "run", "-n", "lsst-uk", "/bin/bash", "-c"]
 
-RUN git clone https://github.com/lsst-uk/csd3-echo-somerville.git
+RUN git clone --branch 128-clean-up-zips-with-dask-k8s https://github.com/lsst-uk/csd3-echo-somerville.git
 
 RUN cd csd3-echo-somerville && python -m pip install .
 
