--- a/echo-side/airflow/role-binding.yaml
+++ b/echo-side/airflow/role-binding.yaml
@@ -3,12 +3,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: airflow-dask-manager-binding
-  namespace: dask-service-clusters
+  namespace: airflow
 subjects:
 - kind: ServiceAccount
   name: airflow-dask-executor
   namespace: airflow
 roleRef:
-  kind: Role
+  kind: ClusterRole
   name: dask-cluster-manager
   apiGroup: rbac.authorization.k8s.io
